--- a/Aufgabe 2/aufgabe2.html
+++ b/Aufgabe 2/aufgabe2.html
@@ -3,15 +3,26 @@
 <head>
      <meta charset="UTF-8">
     <title>Teilnehmer_in WebTech</title>
+<link href="styles/mystyles.css" rel="stylesheet">
 
 </head>
 
 <body>
 <header>
     <h1>Teilnehmner_innen Webtech</h1>
-    <img id ="logo" src="images/fiw.jpg" height="100" width="100"
-         alt="Logo of HTW">
+    <img id ="logo" src="../Aufgabe1/images/fiw.jpg" height="200" width="200"/>
+    <p></p>
+    <p></p>
+
 </header>
+ <nav>
+    <a href="../Aufgabe1/aufgabe1.html"> ALLE </a>
+    <a href="../Aufgabe1/NN/ag.html" > A-G </a>
+    <a href="../Aufgabe1/NN/hl.html "> H-L</a>
+    <a href="../Aufgabe1/NN/mr.html"> M-R</a>
+    <a href="../Aufgabe1/NN/sz.html "> S-Z</a>
+    <a href="../Aufgabe1/aufgabe1.html"> Startseite</a>
+</nav>
 
 
     <p></p>
@@ -327,7 +338,7 @@
 </section>
 
 <footer>
-  <h3>Maria R</h3>
+  <h5>Maria Radde Aufgabe 2</h5>
 </footer>
 <nav>
 
